# claudette

./: .commitlintrc.yml  .envrc  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PLAN.md  README.md  build.rs  clippy.toml  codecov.yml  flake.nix  index.html  mise.toml  package.json  release-please-config.json
.claude/commands/: commit-changes.md  implement-issue.md  incorporate-feedback.md  pull-request.md  rebase-on-main.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tdd.md
.github/instructions/: frontend.instructions.md  regression-review.instructions.md  rust.instructions.md
.github/scripts/: promote-release-assets.sh  validate-public-latest.sh
.github/workflows/: build-binaries.yml  ci.yml  conventional-commits.yml  deploy-site.yml  nightly.yml  release-please.yml  update-frontend-hash.yml  verify-linux-bundle.yml
docs/: agent-sdk-spec.md  auto-detect-apps-plan.md  auto-detect-apps-tdd.md  custom-commands-tdd.md  mcp-detection-tdd.md  nightly-builds.md  permission-handling-design.md  plugin-architecture-tdd.md  remote-terminal-tdd.md  remote-workspaces-tdd.md  scm-provider-plugins-tdd.md  setup-scripts-tdd.md  tauri-migration-tdd.md  terminal-command-display-shell-integration-tdd.md  terminal-command-display-tdd.md  theming.md
packaging/aur/: .gitignore  README.md
plugins/env-direnv/: init.lua  plugin.json
plugins/env-dotenv/: init.lua  plugin.json
plugins/env-mise/: init.lua  plugin.json
plugins/env-nix-devshell/: init.lua  plugin.json
plugins/github/: init.lua
plugins/gitlab/: init.lua  plugin.json
plugins/scm-github/: init.lua  plugin.json
plugins/scm-gitlab/: init.lua  plugin.json
scripts/: _aws-common.sh  aws-win-destroy.sh  aws-win-rdp.sh  aws-win-spinup.sh  boot-health-gate-manual-uat.md  build-updater-manifest.sh  build-win.sh  check-cargo-version-sync.sh  check-coverage-interactive.sh  coverage-interactive.sh  deploy-win.sh  dev.ps1  dev.sh  macos-dev-app-runner.sh  smoke-boot-health-gate.sh  stage-cli-sidecar.sh  stage-pi-harness-sidecar.sh  stage-session-host-sidecar.sh  test-build-updater-manifest.sh  window-restore-matrix.sh
scripts/aur/: test-in-docker.sh  update-pkgbuild.sh
site/: astro.config.mjs  bun.lockb  package.json
src/: App.css  App.tsx  agent.rs  agent_backend.rs  agent_backend_matrix.json  agent_files.rs  app.rs  app_config.rs  audio.rs  cesp.rs  chat.rs  checkpoint_backfill.rs  claude_flags_store.rs  claude_help.rs  config.rs  db.rs  diff.rs  env.rs  file_expand.rs  file_watcher.rs  fork.rs  git.rs  global-system-prompt.md  global_prompt.rs  icons.rs  interactive.rs  lib.rs  logging.rs  main.rs  mcp.rs  mcp_supervisor.rs  message.rs  metrics.rs  missing_cli.rs  path.rs  permissions.rs  plugin.rs  process.rs  room.rs  rpc.rs  (+7 more)
src-cli/: Cargo.toml
src-cli/src/: batch.rs  discovery.rs  ipc.rs  main.rs  output.rs
src-cli/src/commands/: batch.rs  capabilities.rs  chat.rs  chat_hook.rs  mod.rs  plugin.rs  pr.rs  repo.rs  routine.rs  rpc.rs  version.rs  workspace.rs
src-mobile/: Cargo.toml  README.md  tauri.conf.json
src-mobile/capabilities/: default.json  mobile.json
src-mobile/src/: commands.rs  lib.rs  main.rs  state.rs  storage.rs
src-pi-harness/: package.json  tsconfig.json
src-pi-harness/src/: curated-providers.ts  format-error.ts  main.ts  provider-auth.ts
src-server/: Cargo.toml
src-server/src/: auth.rs  collab.rs  handler.rs  lib.rs  main.rs  mdns.rs  snapshot.rs  tls.rs  ws.rs
src-server/tests/: chat_snapshot.rs  env_provider_integration.rs  interactive_controls.rs  restore_workspace.rs  test_auth.rs  test_tls.rs  workspace_archive_propagation.rs
src-session-host/: Cargo.toml
src-session-host/src/: idle.rs  lib.rs  main.rs  server.rs  session.rs
src-session-host/tests/: attach_stream.rs  ensure_session.rs  handshake.rs  idle_exit.rs
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  default-apps.json  shell-integration.bash  shell-integration.fish  shell-integration.zsh  tauri.conf.json  tauri.no-pi.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: PlatformSpeech.swift
src-tauri/src/: agent_mcp_sink.rs  app_info.rs  boot_probation.rs  claude_teammate_bridge.rs  interactive_lifecycle.rs  ipc.rs  main.rs  mdns.rs  missing_cli.rs  notification_macos.rs  ops_hooks.rs  osc133.rs  platform_speech.rs  pty.rs  pty_tracker.rs  remote.rs  state.rs  subprocess_cleanup.rs  tail_backoff.rs  tray.rs  usage.rs  voice.rs  webview2_check.rs  window_state.rs
src-tauri/src/commands/: agent_backends.rs  agent_backends_disabled.rs  agent_files.rs  apps.rs  auth.rs  boot.rs  cesp.rs  chat.rs  claude_flags.rs  cli.rs  community.rs  data.rs  debug.rs  devtools.rs  diagnostics.rs  dialog.rs  diff.rs  env.rs  files.rs  grammars.rs  interactive.rs  mcp.rs  metrics.rs  mod.rs  path_util.rs  pinned_commands.rs  pinned_prompts.rs  plan.rs  plugin.rs  plugins_runtime.rs  remote.rs  repository.rs  scheduling.rs  scm.rs  settings.rs  share.rs  shell.rs  slash_commands.rs  storage.rs  terminal.rs  (+4 more)
src-tauri/src/commands/agent_backends/: auto_detect.rs  codex_auth.rs  codex_gate.rs  config.rs  discovery.rs  gateway.rs  gateway_translate.rs  mod.rs  pi_auth.rs  runtime_dispatch.rs
src-tauri/src/commands/apps/: config.rs  detection.rs  launch.rs  model.rs  tests.rs
src-tauri/src/commands/apps/platform/: image.rs  linux.rs  macos.rs  mod.rs  other.rs  windows.rs  windows_icon_extract.ps1
src-tauri/src/commands/chat/: attachments.rs  checkpoint.rs  conclusions.rs  interaction.rs  lifecycle.rs  mod.rs  naming.rs  remote_control.rs  send.rs  session.rs
src-tauri/src/commands/chat/send/: background_tasks.rs  team_agents.rs
src-tauri/src/commands/files/: attachments.rs  clipboard.rs  listing.rs  platform.rs  tests.rs  trash.rs  types.rs  watcher.rs  workspace_ops.rs
src-tauri/src/transport/: mod.rs  ws.rs
src/agent/: args.rs  background.rs  binary.rs  claude_interactive.rs  harness.rs  (+12 more)
tests/: grants_enforcement.rs  suite.rs
(+1330 files in other folders)
