[workspace]
members = ["src-tauri", "src-server"]
resolver = "2"

[package]
name = "claudette"
version = "0.18.0"
edition = "2024"
description = "Claude's missing better half — a companion tool for Claude Code"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
futures = "0.3"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "io-util", "time", "sync", "rt", "net", "macros"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
which = "7"
dirs = "6"
open = "5"
mlua = { version = "0.10", features = ["luau", "serialize", "async", "send"] }
flate2 = "1"
rand = "0.8"
sha2 = "0.10"
tar = "0.4"

[target.'cfg(windows)'.dependencies]
# Read fresh PATH from HKCU + HKLM Environment registry keys so we pick up
# PATH updates made after claudette started (winget/installer edits) without
# forcing the user to log out and back in.
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
