[workspace]
members = ["src-tauri", "src-server", "src-cli"]
resolver = "2"

[package]
name = "claudette"
version = "0.23.0"
edition = "2024"
description = "Claude's missing better half — a companion tool for Claude Code"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
futures = "0.3"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "io-util", "io-std", "time", "sync", "rt", "net", "macros"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
which = "7"
dirs = "6"
open = "5"
mlua = { version = "0.10", features = ["luau", "serialize", "async", "send"] }
flate2 = "1"
# Pure-Rust minisign signature verification. Already in our dep tree
# transitively via tauri-plugin-updater; pulling it in directly so the
# community-registry signature check has a stable, named dep. We only
# verify (never sign) on the client, so the verifier-only crate is the
# right shape and keeps the binary slim.
minisign-verify = "0.2"
# Cross-platform filesystem watcher used by env-provider reactive
# invalidation. RecommendedWatcher picks FSEvents (macOS), inotify
# (Linux), and ReadDirectoryChangesW (Windows) — single API across all
# three target platforms.
notify = "7"
rand = "0.8"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
# Cross-platform local IPC: Unix domain sockets on macOS/Linux, Named Pipes
# on Windows. One async API for both, used by `agent_mcp::bridge` to talk to
# the Claudette-hosted MCP grandchild that the Claude CLI spawns over stdio.
interprocess = { version = "2", features = ["tokio"] }
# Structured, span-aware logging. We use `tracing` macros across the
# library and binary crates and configure the subscriber from
# `claudette::logging::init` (called once from src-tauri/src/main.rs).
# `tracing-subscriber` provides the layered filter + format pipeline;
# `tracing-appender` adds non-blocking, daily-rotated file output that
# `claudette::logging` pairs with a startup retention sweep so old log
# files are reaped without an external cron.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
tracing-appender = "0.2"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
# Read fresh PATH from HKCU + HKLM Environment registry keys so we pick up
# PATH updates made after claudette started (winget/installer edits) without
# forcing the user to log out and back in.
winreg = "0.55"
# `PlaySoundW` for Windows notification audio (see `audio.rs`). Tiny —
# we only enable the audio submodule and Foundation, no extra runtime.
windows-sys = { version = "0.61", features = ["Win32_Media_Audio", "Win32_Foundation"] }
# Pure-Rust audio playback, Windows-only (macOS/Linux already shell out
# to native players). Used for OpenPeon sound packs that ship MP3 / OGG
# — `PlaySoundW` only handles PCM WAV. Default features pull in legacy
# decoders (minimp3, lewton, claxon); we route everything through
# Symphonia instead for one decoder pipeline and a smaller binary.
rodio = { version = "0.22", default-features = false, features = ["playback", "symphonia-wav", "symphonia-mp3", "symphonia-vorbis"] }

[target.'cfg(unix)'.dependencies]
# Used by `ops::workspace` to SIGKILL the process group of a setup script
# whose 5-minute deadline elapses, so grandchild processes (`npm install`,
# build helpers) don't survive the kill of the immediate `sh -c` parent.
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
# Probes PATH for direnv/mise/nix so env-provider integration tests
# can compile-out when the tool isn't installed on the build host.
which = "7"
