[package]
name = "claudette-cli"
version = "0.21.0"
edition = "2024"
license = "MIT"
description = "Command-line client for the Claudette desktop app"

[[bin]]
# Renamed to `claudette` in Phase 6 once the `claudette-tauri` GUI bin is
# migrated to `claudette-app`. Until then, dev callers use `cargo run -p
# claudette-cli -- <args>` or the cmux dev wrapper.
name = "claudette-cli"
path = "src/main.rs"

[dependencies]
claudette = { path = ".." }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
interprocess = { version = "2", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net"] }

[target.'cfg(unix)'.dependencies]
# `kill(pid, 0)` to detect stale discovery files.
libc = "0.2"
