[package]
name = "claudette-cli"
version = "0.25.0"
edition = "2024"
license = "MIT"
description = "Command-line client for the Claudette desktop app"

[[bin]]
# `cargo build` produces `target/release/claudette` — the user-facing
# binary name. The Tauri GUI's main binary was renamed to
# `claudette-app` in the same change to clear the way.
name = "claudette"
path = "src/main.rs"

[dependencies]
# `default-features = false` so transitive feature unification doesn't
# pull `pi-sdk` back into the lib when the Tauri binary opts out. The
# CLI only consumes data types — no Pi-specific surface.
claudette = { path = "..", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dirs = "6"
interprocess = { version = "2", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net"] }
# Structured logging. The CLI binary itself prefers human-readable
# stdout/stderr output (tables, version banners, JSON), so events emitted
# from `claudette` library calls go through this registry — and surface
# only when a downstream binary (the GUI, or a test harness) installs
# `claudette::logging::init`. The CLI does not install its own subscriber
# yet; that's a deliberate non-goal.
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
# `kill(pid, 0)` to detect stale discovery files.
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# `OpenProcess + GetExitCodeProcess` to detect stale discovery files.
# Mirrors the same probe used by `claudette-tauri::boot_probation::is_pid_alive`,
# pinned to the same 0.61.x major already pulled in by the wider workspace.
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }
