[package]
name = "claudette-server"
version = "0.23.0"
edition = "2024"
description = "Headless Claudette backend for remote access"
license = "MIT"

[lib]
name = "claudette_server"
path = "src/lib.rs"

[[bin]]
name = "claudette-server"
path = "src/main.rs"

[dependencies]
claudette = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
portable-pty = "0.8"
rcgen = "0.13"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
mdns-sd = "0.12"
rand = "0.8"
base64 = "0.22"
toml = "0.8"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
gethostname = "1"
hex = "0.4"
# Structured logging. We re-emit through the Rust `tracing` registry
# so when the server is embedded inside the Tauri binary (the default
# `server` feature path), every event lands in the same daily log
# file as the GUI side. The standalone `claudette-server` binary
# installs its own subscriber via `claudette::logging::init` in
# `main.rs`.
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
