[package]
name = "claudette-tauri"
version = "0.19.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "claudette"
path = "src/main.rs"

[dependencies]
claudette = { path = ".." }
claudette-server = { path = "../src-server", optional = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
base64 = "0.22"

tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "process", "fs", "rt"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
libc = "0.2"
portable-pty = "0.8"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
sha2 = "0.10"
hex = "0.4"
mdns-sd = "0.12"
futures-util = "0.3"
async-trait = "0.1"
gethostname = "1"
urlencoding = "2"
parking_lot = "0.12"
chrono = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
url = "2"
cpal = "0.17"
candle-core = "=0.9.2"
candle-nn = "=0.9.2"
candle-transformers = "=0.9.2"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
rubato = { version = "2", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "=0.9.2", features = ["metal"] }
candle-nn = { version = "=0.9.2", features = ["metal"] }
mac-notification-sys = "0.6"

[target.'cfg(windows)'.dependencies]
# Registry probe for WebView2 Runtime + MessageBoxW fallback. Kept as direct
# deps (not transitive via `claudette`) so main.rs can run the probe before
# any lib-crate code that might depend on a working webview.
winreg = "0.55"
windows-sys = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[features]
default = ["server"]
devtools = ["tauri/devtools"]
server = ["dep:claudette-server"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
