[package]
name = "claudette-tauri"
version = "0.24.0"
edition = "2024"
license = "MIT"

[[bin]]
# Renamed from "claudette" to "claudette-app" so the new `claudette-cli`
# crate can claim the user-facing `claudette` binary name. The .app
# bundle is still called Claudette.app via tauri.conf.json's
# productName + mainBinaryName.
name = "claudette-app"
path = "src/main.rs"

[dependencies]
# `default-features = false` so the Tauri binary stays in sole control of
# whether the Pi harness is compiled in — we re-opt-in via our own
# `pi-sdk` feature below. This lets `cargo tauri build --no-default-features`
# produce a Pi-less binary while leaving lib-level tests on Pi-enabled
# defaults.
claudette = { path = "..", default-features = false }
claudette-server = { path = "../src-server", optional = true }
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
base64 = "0.22"
trash = "5"

tauri-plugin-clipboard-manager = "2"
# Local IPC server for the `claudette` CLI — same crate the lib uses for
# the `agent_mcp` bridge, so we reuse the established socket/pipe pattern.
interprocess = { version = "2", features = ["tokio"] }
# Token generation for IPC client auth.
rand = "0.8"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "process", "fs", "rt"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
libc = "0.2"
portable-pty = "0.8"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
sha2 = "0.10"
hex = "0.4"
mdns-sd = "0.12"
futures-util = "0.3"
async-trait = "0.1"
gethostname = "1"
urlencoding = "2"
parking_lot = "0.12"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
url = "2"
cpal = { version = "0.17", optional = true }
candle-core = { version = "=0.9.2", optional = true }
candle-nn = { version = "=0.9.2", optional = true }
candle-transformers = { version = "=0.9.2", optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["onig"], optional = true }
rubato = { version = "2", default-features = false, optional = true }
hound = { version = "3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "=0.9.2", features = ["metal"], optional = true }
candle-nn = { version = "=0.9.2", features = ["metal"], optional = true }
candle-transformers = { version = "=0.9.2", features = ["metal"], optional = true }
objc = "0.2"
# Pairs with `objc` 0.2 — we use `ConcreteBlock` to provide the
# `requestAuthorizationWithOptions:completionHandler:` callback expected
# by UNUserNotificationCenter. Used only by `notification_macos.rs`.
block = "0.1"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
# Registry probe for WebView2 Runtime + MessageBoxW fallback. Kept as direct
# deps (not transitive via `claudette`) so main.rs can run the probe before
# any lib-crate code that might depend on a working webview.
winreg = "0.55"
windows-sys = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    # Used by boot_probation::is_pid_alive — the rollback helper must
    # wait for the original GUI process to exit before the install dir
    # can be replaced (Windows holds an exclusive lock on the running
    # `.exe`). Probe via OpenProcess + GetExitCodeProcess.
    "Win32_System_Threading",
] }
# COM-aware bindings for the SAPI 5.4 in-process recognizer used by the
# Windows native voice provider. `windows-sys` would force us to manage
# IUnknown::AddRef/Release by hand; the higher-level `windows` crate
# wraps each interface in a smart pointer whose Drop calls Release —
# essential for keeping the COM cleanup correct under panic / early
# return paths.
#
# Pinned to the 0.61.x major already pulled in transitively by the
# wider build (e.g. via tauri-plugin-fs's WebView2 deps), so we don't
# duplicate the Win32 codegen across two `windows` major versions.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_Media_Audio",
    "Win32_Media_Speech",
] }

[features]
# `devtools` is in the default set so the Help → Open dev tools menu item
# works in release builds. The webview inspector ships in every binary;
# users open it via the help menu rather than via a custom build flag.
#
# `pi-sdk` is independent of `alternative-backends`: dropping just
# `pi-sdk` keeps Codex Native + the Ollama/LM Studio cards reachable
# while excluding the Pi harness sidecar and all Pi-routing code. To
# build without Pi, pair with `tauri.no-pi.conf.json` so the bundler
# stops looking for the `claudette-pi-harness` sidecar.
default = ["server", "voice", "devtools", "alternative-backends", "pi-sdk"]
alternative-backends = []
pi-sdk = ["claudette/pi-sdk"]
devtools = ["tauri/devtools"]
server = ["dep:claudette-server"]
voice = [
    "dep:cpal",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:rubato",
    "dep:hound",
]

[lints.rust]
# objc 0.2.x uses the old `feature = "cargo-clippy"` pattern to detect Clippy
# (predating `cfg(clippy)`). Declare it as a known value so rustc's check-cfg
# exhaustiveness check doesn't flag macro expansion sites in this crate.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Icon generation: only icons/icon.png is tracked in git; the platform-specific
# bundle icons (PNGs, .icns, .ico) are regenerated at build time.
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.4"
icns = "0.3"
